# lab_work_8

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE  README.md
.github/workflows/: cf.yml
banking/: Account.cpp  Account.h  Transaction.cpp
tests/: t1st.cpp
